# STUDY.sqlalchemy

./: appunti.txt  pyproject.toml
src/: 0-esempio_connessione.py  1-creazione_tabella.py  2-creazione_db.py  3-controller.py  3-repository.py  _examples.py  tables_definition.py  url.py
